--- a/carousel/sass/_vol.scss
+++ b/carousel/sass/_vol.scss
@@ -1,7 +1,7 @@
 /* #vol */
 #vol {
 	.volTitleWr {
-		margin-bottom: 10px;
+		margin: 10px 0;
 		text-align: center;
 		.volTitle {
 			font-size: 18px;
@@ -11,7 +11,7 @@
 		}
 	}
 }
-#vol.episode3 {
+#vol {
 	.thumb {
 		ul {
 			li {
